# AraAI

./: .env  .env.example  .gitignore  45  ADVANCED_ML_SUMMARY.md  AMD_RX7600XT_SETUP.md  Ara_AI_Launcher.bat  CHANGELOG.md  CI_CD_SETUP.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_SUMMARY.md  DOCS_INDEX.md  DOCUMENTATION.md  Dockerfile  FINAL_DEPLOYMENT_COMMANDS.md  GITHUB_ACTIONS_FIX.md  GPU_SETUP_GUIDE.md  HOURLY_TRAINING.md  HOURLY_TRAINING_INDEX.md  HOURLY_TRAINING_SUMMARY.md  LICENSE  LOCAL_BENCHMARK_REPORT.md  MANIFEST.in  PACKAGE_README.md  PACKAGE_SUMMARY.md  PROJECT_STATUS.md  QUICKSTART_HOURLY.md  QUICK_START.md  README.md  README_HOURLY_SYSTEM.md  RELEASE_NOTES.md  REPO_CLEANUP_SUMMARY.md  SECURITY.md  TESTING.md  TRAINING_GUIDE.md  TRAINING_RESULTS.md  WEEKLY_RELEASE_SUMMARY.md  WORKFLOW_UPDATES.md  (+38 more)
alerts/: alerts.json  history.json
ara/: __init__.py
archive/: DEPLOYMENT_INSTRUCTIONS.md  PROJECT_STATUS.md  ara_old.py
backtest_results/: backtest_DEMO_20251114_204043.json
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
config/: default.json
data/: stock_data.db
datasets/: README.md
deployment/: README.md
docs/: API_DOCUMENTATION.md  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CI_CD_FIXES.md  CI_CD_IMPROVEMENTS.md  CI_CD_STATUS.md  CONTRIBUTING.md  CREDITS.md  DEPLOYMENT_SUMMARY.md  DOCUMENTATION_INDEX.md  FAQ.md  INDEX.md  INDICATORS.md  INSTALLATION.md  LOSS_FUNCTIONS.md  MODEL_CARD.md  PRIVACY.md  QUICK_START.md  README.md  RELEASE_NOTES_v2.2.0-Beta.md  SECURITY.md  TECHNICAL.md  (+6 more)
(+509 files in other folders)
